(Fix): Stops the map for being too tall
Problem
The map becomes too tall on mobile device, overflowing the screen
of the phone, or making it not obvious that there is content below
it. Need to limit its height.

Solution
Give #map a max-height of 50vh.

Closes #61.

--- a/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
+++ b/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
@@ -101,6 +101,7 @@ ul {
 #map {
   background-color: #C9E2F1;
   height: 350px;
+  max-height: 50vh;
   margin-top: 0.25rem;
   border-radius: 0.25rem;
 }
